--- a/templates/iptables-rules_template.j2
+++ b/templates/iptables-rules_template.j2
@@ -78,15 +78,15 @@
 # Allow {{ rule.service_name }}
 {% if rule.src_net | default('') %}
 {% if rule.multiple %}
--A INPUT-{{ zone.name }} -s {{ rule.src_net }} -p tcp -m state --state NEW -m tcp -m multiport --dports {{ rule.ports }} -j ACCEPT
+-A INPUT-{{ zone.name }} -s {{ rule.src_net }} -p {{ rule.protocol | default("tcp") }} -m state --state NEW -m {{ rule.protocol | default("tcp") }} -m multiport --dports {{ rule.ports }} -j ACCEPT
 {% else %}
--A INPUT-{{ zone.name }} -s {{ rule.src_net }} -p tcp -m state --state NEW -m tcp --dport {{ rule.ports }} -j ACCEPT
+-A INPUT-{{ zone.name }} -s {{ rule.src_net }} -p {{ rule.protocol | default("tcp") }} -m state --state NEW -m {{ rule.protocol | default("tcp") }} --dport {{ rule.ports }} -j ACCEPT
 {% endif %}
 {% else %}
 {% if rule.multiple %}
--A INPUT-{{ zone.name }} -p tcp -m state --state NEW -m tcp -m multiport --dports {{ rule.ports }} -j ACCEPT
+-A INPUT-{{ zone.name }} -p  {{ rule.protocol | default("tcp") }} -m state --state NEW -m {{ rule.protocol | default("tcp") }} -m multiport --dports {{ rule.ports }} -j ACCEPT
 {% else %}
--A INPUT-{{ zone.name }} -p tcp -m state --state NEW -m tcp --dport {{ rule.ports }} -j ACCEPT
+-A INPUT-{{ zone.name }} -p {{ rule.protocol | default("tcp") }} -m state --state NEW -m {{ rule.protocol | default("tcp") }} --dport {{ rule.ports }} -j ACCEPT
 {% endif %}
 {% endif %}
 {% endfor %}
