--- a/templates/config.j2
+++ b/templates/config.j2
@@ -1,6 +1,6 @@
 {{ ansible_managed | comment }}
 
-IPTABLES_MODULES="{{ iptables_config_modules | join(" ") }}"
+IPTABLES_MODULES="{{ iptables_config_modules_managed | join(" ") }}"
 IPTABLES_MODULES_UNLOAD="yes"
 IPTABLES_SAVE_ON_STOP="{{ 'yes' if iptables_config_save_on_stop else 'no' }}"
 IPTABLES_SAVE_ON_RESTART="{{ 'yes' if iptables_config_save_on_restart else 'no'}}"
