--- a/templates/rsyslog.j2
+++ b/templates/rsyslog.j2
@@ -1,3 +1,3 @@
 {{ ansible_managed | comment }}
 
-:msg,contains,”FW denied:” {{ iptables_log_path }}
+:msg,contains,"FW denied:" {{ iptables_log_path }}
